# Fortvna

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FORTVNA_SPEC_v1.0.md  README.md  docker-compose.yml  justfile  pyproject.toml  secrets.env.example
.github/workflows/: ci.yml
.obsidian/: workspace.json
cosmos/: pyproject.toml
cosmos/cosmos/: __init__.py
docs/: CODEX_HANDOFF.md  SESSION_LOG.md
docs/DECISIONS/: ADR-001-shared-core-and-proto-packages.md  README.md
factor_zoo/: pyproject.toml
factor_zoo/factor_zoo/: __init__.py
fortvna_core/: pyproject.toml
fortvna_core/fortvna_core/: __init__.py  ids.py  logging.py  settings.py  trading_calendar.py
minisha/: pyproject.toml
minisha/minisha/: __init__.py
proto/: pyproject.toml
proto/fortvna_proto/: __init__.py  budget.py  control.py
tests/: test_ids_uuid7.py  test_logging.py  test_proto_contracts.py  test_settings.py  test_trading_calendar.py
